Handle when ThreadPerTaskExecutor.threadCount() is not available (#7045)
Closes gh-6726

Signed-off-by: Johnny Lim <izeye@naver.com>